tests/transpiler/x/zig/order_by_map.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/order_by_map.zig:10:18: error: unable to infer array size
    const data: [_]Data = [_]Data{.{ .a = 1, .b = 2 }, .{ .a = 1, .b = 1 }, .{ .a = 0, .b = 5 }};
                 ^
